nginx-with-ingress-class-controller/13-webapp-hello-service-v2.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp-hello-service-v2
spec:
  selector:
    app: webapp-hello-v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
