nginx-with-ingress-class-controller/15-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-class
  rules:
  - host: v1.test.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: webapp-hello-service-v1
            port:
              number: 80
  - host: v2.test.com 
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: webapp-hello-service-v2
            port:
              number: 80
